# elsabot_4wd

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: cmd_vel_mux.yaml  ekf.yaml  ekf_with_gps.yaml  imu_filter.yaml  joy.yaml  keep_out.yaml  navigation.yaml  navigation_fixed_path_pure_pursuit_deltas.yaml  navigation_gps.yaml  navigation_gps_deltas.yaml
elsabot_4wd/: ros2_web_bridge_launch.py
gazebo_worlds/: my_empty_world.sdf  my_world4.sdf
hwsetup/: 71-i2c.odyssey.rules  80-i2c-tools.rules  99-gpio.rules  99-usb-serial.rules
launch/: bringup.launch.py  description.launch.py  gazebo.launch.py  gps.launch.py  joy_teleop.launch.py  keep_out_area.launch.py  lasers.launch.py  navigation.launch.py  sensor_fusion.launch.py  sensors.launch.py  slam.launch.py
maps/: backyard.pgm  backyard.yaml  backyard_simple.pgm  backyard_simple.yaml  downstairs.pgm  downstairs.yaml  map_office_keep_out.pgm  map_office_keep_out.yaml  office.pgm  office.yaml  upstairs.pgm  upstairs.yaml  upstairs2.pgm  upstairs2.yaml  upstairs3.pgm  upstairs3.yaml  upstairs_1111.pgm  upstairs_1111.yaml
meshes/: oakd.stl
nav_bt/: follow_point.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
rviz/: description.rviz  navigation.rviz
urdf/: 4wd_properties.urdf.xacro
urdf/controllers/: diff_drive.urdf.xacro  omni_drive.urdf.xacro  skid_steer.urdf.xacro
urdf/mech/: base.urdf.xacro  wheel.urdf.xacro
urdf/robots/: 2wd.urdf.xacro  4wd.urdf.xacro  mecanum.urdf.xacro  square.urdf.xacro
urdf/sensors/: depth_sensor.urdf.xacro  generic_laser.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro  nav_camera.urdf.xacro  oakd_on_ptbase.urdf.xacro
