<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elsabot_4wd</name>
  <version>0.0.1</version>
  <description>ElsaBot 4WD robot bringup scripts.  Based on Linorobot2.</description>
  <maintainer email="horton.rscott@gmail.com">Scott Horton</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
